# CROPI

./: .gitignore  README.md  pyproject.toml
cropi/: README.md  __init__.py
cropi/core/: __init__.py  compute_inf_score.py  get_grad.py  select.py
cropi/inference/: infer_trainset.sh  infer_validset.sh
cropi/scripts/: get_popi_score.sh  run_cropi.sh  run_qwen2.5_gsm_math_dsr_rl.sh
cropi/utils/: __init__.py  model_merger.py  rl_utils.py  split_files.py
